# rust_terminal_playground

./: Cargo.toml
src/: app.rs  main.rs  map.txt  terminal_ui.rs
src/model/: mod.rs
src/resources/: big_hexagon.txt  hexagon.txt  map.txt  map_2.txt  small_hexagon.txt
src/view/: map.rs  mod.rs
