[package]
name = "rust_terminal_playground"
version = "0.1.0"
authors = ["Mikhail Sinitcyn <mikhail.sinitcyn@toptal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm="0.18"

[dependencies.tui]
version = "0.13"
default-features = false
features = ['crossterm']

